feat: add interview transcripts

--- a/interview_collaboration.html
+++ b/interview_collaboration.html
@@ -63,7 +63,7 @@
         </div>
         <div>
           <h2>Ing. Josef Treml</h2>
-          <p>Josef Treml is a current member of ODS political party, headmaster and a teacher at our school,
+          <p>Josef Treml is a current member of the ODS political party, headmaster and a teacher at our school,
             teaching electrotechnic subjects such as mechanical engineering.
           </p>
           <p class="transcript">
@@ -78,20 +78,19 @@
     <div class="box">
       <div class="interview-box">
         <div class="interview-image">
-          <img src="fojtik.png" alt="Image of Aleš Fojtík" />
+          <img src="fukova.png" alt="Image of Magdaléna Fuková" />
         </div>
         <div class="interview-text">
-          <h2>Ing. Aleš Fojtík, PhD.</h2>
-          <p>Aleš Fojtík is a current Chief Revenue Officer (CRO) at Srovnejto Group,
-            having rich experience in the finance world and appearing on television
-            frequently.
+          <h2> Mgr. Magdaléna Fuková</h2>
+          <p>Magdaléna Fuková is a English language teacher and a organizer of ERASMUS+ at our school,
+            who is passionate about her craft and developing students further.
           </p>
           <p class="transcript">
-            <a href="Quartett.pdf" target="_blank">
+            <a href="fukova_transcript.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
-          <audio controls src="fojtik.mp3"></audio>
+          <audio controls src="fukova.mp3"></audio>
         </div>
       </div>
     </div>
