--- a/interview_education.html
+++ b/interview_education.html
@@ -88,7 +88,7 @@
             teaching programming and automatization.
           </p>
           <p class="transcript">
-            <a href="Quartett.pdf" target="_blank">
+            <a href="nuhlicek_transcript.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
