--- a/interview_religion.html
+++ b/interview_religion.html
@@ -68,7 +68,7 @@
             any type of puzzles.
           </p>
           <p class="transcript">
-            <a href="Quartett.pdf" target="_blank">
+            <a href="cablikova_transcript.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
@@ -88,7 +88,7 @@
             frequently.
           </p>
           <p class="transcript">
-            <a href="Quartett.pdf" target="_blank">
+            <a href="kral_transcript.pdf" target="_blank">
               Audio Transcript
             </a>
           </p>
