fix: change main name

--- a/social.html
+++ b/social.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quartett - Social Studies</title>
+  <title>Partnerschaftsverband - Social Studies</title>
   <link rel="stylesheet" href="social.css">
   <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
 </head>
@@ -13,7 +13,7 @@
     <nav>
       <a href="index.html">
         <h1>
-        Quartett
+          Partnerschaftsverband
       </h1>
     </a>
     <div class="links">
