--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quartett - Home</title>
+  <title>Partnerschaftsverband - Home</title>
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
 </head>
@@ -13,7 +13,7 @@
   <nav>
     <a href="index.html">
       <h1>
-      Quartett
+        Partnerschaftsverband
     </h1>
   </a>
   <div class="links">
@@ -58,11 +58,11 @@
   <header class="flex-column">
     <h2>
       Germany, Czech Republic, France & </br>
-    Poland together form the <span class="light-blue-text">Quartett</span></h2> 
+    Poland together form <span style="display: block;">the <span class="light-blue-text">Partnerschaftsverband</span></span> </h2> 
   </header>
   <article class="text-box">
     <p>
-      This project will show you the potential future of Quartett, that we hope will come true. You will learn about some basic information, but you will also listen to some interviews with people who have something to say about that matter in particular. You are going to learn about religion, art, languages, social studies, international collaboration and education.</p>
+      In this project we created a simple website, that’s about religion, art, education, social studies, and international collaboration among Partnerschaftsverband regions, but that’s not the main part of this project. The most important part of this project is interviews with people who have something to tell us about a specific topic. </p>
     </article>
 </div>
 </body>
