--- a/interview_religion.html
+++ b/interview_religion.html
@@ -64,7 +64,7 @@
         <div>
           <h2>Ing. arch. Eva Čablíková Bc.</h2>
           <p>Eva Čablíková is a current teacher at our school,
-            primarily teaching math and physics. She also like drawing and 
+            primarily teaching math and physics. She also likes drawing and 
             any type of puzzles.
           </p>
           <p class="transcript">
