feat: website finish

--- a/interview_religion.html
+++ b/interview_religion.html
@@ -83,9 +83,9 @@
         </div>
         <div class="interview-text">
           <h2>Michal Král</h2>
-          <p>Michal Král is a current Chief Revenue Officer (CRO) at Srovnejto Group,
-            having rich experience in the finance world and appearing on television
-            frequently.
+          <p>Michal Král is a current student at an university in Prague,
+            studying history and languages. He's also a member of a not much known
+            Society of Saint Pius X.
           </p>
           <p class="transcript">
             <a href="kral_transcript.pdf" target="_blank">
